src/test/ui/feature-gates/feature-gate-const_generics.stderr
error[E0658]: const generics are unstable (see issue #44580)
  --> $DIR/feature-gate-const_generics.rs:1:14
   |
LL | fn foo<const X: ()>() {} //~ ERROR const generics are unstable
   |              ^
   |
   = help: add #![feature(const_generics)] to the crate attributes to enable

error[E0658]: const generics are unstable (see issue #44580)
  --> $DIR/feature-gate-const_generics.rs:4:18
   |
LL | struct Foo<const X: usize>([(); X]); //~ ERROR const generics are unstable
   |                  ^
   |
   = help: add #![feature(const_generics)] to the crate attributes to enable

error: const generics in any position are currently unsupported
  --> $DIR/feature-gate-const_generics.rs:1:14
   |
LL | fn foo<const X: ()>() {} //~ ERROR const generics are unstable
   |              ^

error: const generics in any position are currently unsupported
  --> $DIR/feature-gate-const_generics.rs:4:18
   |
LL | struct Foo<const X: usize>([(); X]); //~ ERROR const generics are unstable
   |                  ^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
